resources/style.css
/* Header */

.header{
  font-family: Verdana;
  font-size: 14px
  font-weight: bold;
  display: flex;
  border-bottom: solid black .5px;
  align-content: flex-end;
  justify-content: space-between;
  position: fixed;
  z-index: 5;
  width: 100%;
height: 80px;
  background-color: white;

}

.logo{
  color: MediumAquamarine;
  display: inline-flex;
  margin-left: 25px;
  margin-bottom: 10px;

}


.nav h4{
display: inline-block;
align-content: flex-end;
margin-right: 25px;
text-decoration: underline;
}

/* Main Content */
.logo{

}

.column{
  display: inline-flex;
  flex-direction: row;
  margin-left: 25px;
  margin-right: 25px;
  margin-top: 25px;
  align-items: stretch;

}
.column.large{
  display: inline-flex;
}

.column.medium{
  display: inline-flex;
  margin-left: 25px;
}

.column.small{
  display: inline-flex;
  margin-left: 25px;
}

.small{
  margin-left: 25px;
  width: 240px;
}

.medium{
  margin-left: 25px;
  align-items: stretch;
  width: 300px;
}

.large{
  width: 630px;
}

.main{
  display: inline-flex;
  position: relative;
  top: 100px;
  bottom: 500px;
}

.phish{

  display: flex;
  background-image: url("images/img-story-main.png");
}

.phish p{
  display: flex;
  font-family: Georgia;
  font-weight: bold;
  font-size: 40px;
  color: white;
  height: 260px;
  text-align: left;
  margin-top: 0;
}

.valley{

  font-family: Georgia;
  font-size: 17px;
  color: black;
}

.orca{
margin-top: 15px;
margin-bottom: 30px;
}

.orca p{
  font-family: Georgia;
  font-size: 17px;
  color: black;
}
.earth{
  display: flex;
  background-image: url("images/img-story-2.png");
  margin-top: 15px;
  text-align: center;

}

.earth p{
  font-family: Georgia;
 font-weight: bold;
 font-size: 30px;
 color: white;
 height: 2700px;
 width: 300px;
 margin-top: 0;
 text-align: center;
 width: 100%;
}

.burger{
margin-top: 15px;
margin-bottom: 30px;
}

.burger p{
  font-family: Georgia;
  font-size: 17px;
  color: black;
}
.memory{
  background-image: url("images/img-story-3.png");
  margin-top: 15px;
}

.memory p{
font-family: Georgia;
 font-weight: bold;
 font-size: 30px;
 color: white;
 height: 270px;
 width: 300px;
 margin-top: 0;
 text-align: center;
 width: 95%;
}

.FBI{

}

.FBI p{
  font-family: Georgia;
  font-size: 17px;
  color: black;
}

.brooklyn{
  font-family: Georgia;
  font-size: 17px;
  color: black;
}

.cats{

  background-image: url("images/img-story-1.png");
}
.cats p{
font-family: Georgia;
 font-weight: bold;
 font-size: 30px;
 color: white;
 height: 240px;
 margin-top: 0;
 text-align: center;
}


.cookie{

}


.bites p{
  font-family: Georgia;
  font-size: 17px;
  color: black;
}
.box{

}

.stories{
  display: flex;
  justify-content: space-between;
  height: 565px;
  width: 630px;
}

.story{
  display: flex;
  flex-direction: column;
  height: 565px;
  width: 300px;
}

.newsbites h3{
  font-size: 16px;
font-weight: bold;
text-align: center;
}

.bites{
background-color: WhiteSmoke;
font-family: Verdana;
font-size: 12px;
color: DimGray;
flex-direction: column;
display: flex;
border-bottom: black solid 1px;
padding: 11px 20px;
}

/* Footer */

.footer{
  background-color: MediumAquamarine;
 margin: auto;
 font-family: Verdana;
 font-size: 12px;
 display: flex;
 align-items: center;
 justify-content: center;
 width: 100%;
 height: 325px;
 flex-direction: column;
 margin-top: 100px;
 position: relative
 top: 50px;
}

.info{
  display: block;
  flex-direction: column;
}

nav{
  display: inline-block;
  padding-left: 25px;
}

nav span{
  display: inline-block;
  padding: 20px 10px;
  text-decoration: underline;
}

.title{
  font-family: Georgia;
  font-size: 16px;
  font-weight: bold;
  color: white;
  padding-right: 25px;
  border-right: solid white 2px;
  display: inline-block;
}

.copywrite{
  display: block;
}

